@@ -11,6 +11,7 @@
     * Fix printer.sn being unset in the wizard by waiting for it
     * Fixed some telemetry being sent basically at random
     * Enabled the RESET_PRINTER command
+    * Fixed printer resetting multiple times when it gets reset mid-print
 
 0.2.0 (2020-12-14)
 
